# digital_tekstanalyse

./: .buildinfo  .directory  .gitignore  10. Søk_i_aviser.ipynb  10_Frekvenslister.ipynb  10_Søk_i_aviser.ipynb  1_Bygg_korpus.ipynb  2.0.Bygg_korpus.ipynb  2.1.Konkordans.ipynb  2.2.Kollokasjoner.ipynb  2.3.Frekvenslister.ipynb  2_Konkordans.ipynb  3_Kollokasjoner.ipynb  4 a_N-gram_og_galakser_åpen.ipynb  4.0.sentiment_analysis_timeseries.ipynb  4.1.topic_modelling_with_LDA.ipynb  4_N-gram_og_galakser.ipynb  5_Navnegrafer.ipynb  6_Søk_med_OCR-feil.ipynb  6_Søk_med_trunkering.ipynb  7_Setningsuttrekk.ipynb  8_Sammenlign_metadata.ipynb  9_Ordparadigmer.ipynb  Anbefalt_lesning.ipynb  DHLAB_ved_Nasjonalbiblioteket.ipynb  Oppstart.ipynb  README.html  README.md  Søk_i_aviser.ipynb  _config.yml  _toc.yml  bygg_korpus.ipynb  cookbook.html  cookbook.md  dhlab_class_demo.html  dhlab_class_demo.ipynb  dispersion.ipynb  genindex.html  index.html  index.md  (+16 more)
.github/workflows/: binder.yml  deploy_pages.yml  update_bibliography.yml
.ipynb_checkpoints/: 10_Søk_i_aviser-checkpoint.ipynb  1_Bygg_korpus-checkpoint.ipynb  2_Konkordans-checkpoint.ipynb  3_Kollokasjoner-checkpoint.ipynb  4_N-gram_og_galakser-checkpoint.ipynb  6_Søk_med_trunkering-checkpoint.ipynb  7_Setningsuttrekk-checkpoint.ipynb  8_Sammenlign_metadata-checkpoint.ipynb  Anbefalt_lesning-checkpoint.ipynb  DHLAB_ved_Nasjonalbiblioteket-checkpoint.ipynb  Testfil-checkpoint.ipynb
Legacy_notebooks/: 10_Frekvenslister.ipynb  10_Søk_i_aviser.ipynb  4 a_N-gram_og_galakser_åpen.ipynb  4_N-gram_og_galakser.ipynb  5_Navnegrafer.ipynb  6_Søk_med_trunkering.ipynb  7_Setningsuttrekk.ipynb  8_Sammenlign_metadata.ipynb  9_Ordparadigmer.ipynb  README.md
_sources/: README.md  dhlab_class_demo.ipynb  index.md
_sources/bibliography/: bibliography.md
_sources/cookbook/: 4.0.sentiment_analysis_timeseries.ipynb  4.2.natbib_query.ipynb  sentiment.md
_sources/tutorial/: 1.0.Oppstart.ipynb  2.0.Bygg_korpus.ipynb  (+8 more)
bibliography/: README.md  bibliography.html  bibliography.md  zotero_citations_copy.py
binder/: Dockerfile
cookbook/: 4.0.sentiment_analysis_timeseries.html  4.0.sentiment_analysis_timeseries.ipynb  4.1.topic_modelling_with_LDA.html  4.1.topic_modelling_with_LDA.ipynb  4.2.natbib_query.html  4.2.natbib_query.ipynb  corpus_avis_2000_2021_Kristiansand_biblioteket_created2023-02-14.csv  sentiment.html
digital_tekstanalyse/: sentiment.py
hidden_notebooks/: 4.0.sentiment_analysis_timeseries.ipynb
tutorial/: 1.0.Oppstart.html  1.0.Oppstart.ipynb  2.0.Bygg_korpus.html  2.0.Bygg_korpus.ipynb  2.1.Konkordans.html  2.1.Konkordans.ipynb  2.2.Kollokasjoner.html  2.2.Kollokasjoner.ipynb  2.3.Frekvenslister.html  2.3.Frekvenslister.ipynb  2.4.Søk_i_aviser.html  2.4.Søk_i_aviser.ipynb  2.5.n-gram_og_galakser.html  2.5.n-gram_og_galakser.ipynb  2.6.sammenlign_metadata.html  2.6.sammenlign_metadata.ipynb  3.0.ner_og_pos.html  3.0.ner_og_pos.ipynb  3.1.ordparadigmer.html  3.1.ordparadigmer.ipynb  3.2.dispersion.html  3.2.dispersion.ipynb  4.0.experiment.html
workshop2022/: DHLAB_deloppgaver.ipynb  DHLAB_workshop_deloppgaver_Maria_og _Ingerid.ipynb
(+42 files in other folders)
