[project]
name = "digital-tekstanalyse"
version = "0.1.0"
description = "Demo notebooks for dhlab"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Nasjonalbiblioteket", email = "dhlab@nb.no"}]
requires-python = ">=3.10,<4.0"
dependencies = [
    "pandas>=2.2.1,<3",
    "matplotlib>=3.8.3,<4",
    "numpy>=1.26.4,<2",
    "requests>=2.31.0,<3",
    "ipython>=8.22.2,<9",
    "seaborn>=0.13.2,<0.14",
    "scipy>=1.12.0,<2",
    "networkx>=3.2.1,<4",
    "wordcloud>=1.9.3,<2",
    "community>=1.0.0b1,<2",
    "python-louvain>=0.16,<0.17",
    "dhlab>=2.31.0,<3",
    "wheel>=0.42.0,<0.43",
    "openpyxl>=3.1.2,<4",
    "gensim>=4.3.2,<5",
    "pyldavis>=3.4.1,<4",
    "jupyter-book>=1.0.0,<2",
    "ghp-import>=2.1.0,<3",
    "nb-tokenizer>=0.1.0",
]

[project.optional-dependencies]
bibliography = [
    "pyzotero>=1.5.18,<2",
]

[tool.poetry]
name = "digital-tekstanalyse"
version = "0.1.0"
description = "Demo notebooks for dhlab"
authors = ["Nasjonalbiblioteket <dhlab@nb.no>"]
license = "mit"
readme = "README.md"
packages = [{include = "digital_tekstanalyse"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
requests = "^2.31.0"
ipython = "^8.22.2"
seaborn = "^0.13.2"
scipy = "^1.12.0"
networkx = "^3.2.1"
wordcloud = "^1.9.3"
community = "^1.0.0b1"
python-louvain = "^0.16"
dhlab = "^2.31.0"
wheel = "^0.42.0"
openpyxl = "^3.1.2"
gensim = "^4.3.2"
pyldavis = "^3.4.1"
jupyter-book = "^1.0.0"
ghp-import = "^2.1.0"
nb-tokenizer = "^0.1.0"


[tool.poetry.group.bibliography.dependencies]
pyzotero = "^1.5.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ghp-import>=2.1.0",
    "ruff>=0.15.5",
]
